--- a/Assignments/Assignment_1/style.css
+++ b/Assignments/Assignment_1/style.css
@@ -35,13 +35,13 @@ p
 table 
 {
     width: 100%;
-    border: 2px solid black;
+    border: 2px solid rgb(250, 247, 247);
     background-color: rgb(218, 245, 236);
 }
 
 table tr:first-child 
 {
-    background-color: #8cb8d0;
+    background-color: rgb(0, 73, 112);
 }
 
 td, th 
@@ -59,7 +59,7 @@ form
 .container 
 {
     border: 3px solid black;
-    background-color: #8cb8d0;
+    background-color: rgb(0, 73, 112);
     width: 800px;
     display: flex;
     flex-direction: column;
@@ -68,5 +68,5 @@ form
 
 img 
 {
-    border: 3px solid black;
+    border: 3px solid rgb(246, 243, 243);
 }
